RealtimeMediaSource should ignore ideal values outside the min/max range https://bugs.webkit.org/show_bug.cgi?id=217178

Reviewed by Eric Carlson.

Source/WebCore:

Make valueForDiscreteCapabilityValues returns an Optional in case no valid value can be selected from the constraint.
This basically means the constraint will be ignored.
Before the patch, in case of no valid value, 0 will be set, which is a bad value for sample rate.

Test: fast/mediastream/audio-bad-sampleRate.html

* platform/mediastream/MediaConstraints.h:
(WebCore::NumericConstraint::valueForDiscreteCapabilityValues const):
* platform/mediastream/RealtimeMediaSource.cpp:
(WebCore::applyNumericConstraint):

LayoutTests:

* fast/mediastream/audio-bad-sampleRate-expected.txt: Added.
* fast/mediastream/audio-bad-sampleRate.html: Added.


Canonical link: https://commits.webkit.org/229958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267839 268f45cc-cd09-0410-ab3c-d52691b4dbfc